expose doc analyser through an end point

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-llama-index==0.12.40
-llama-index-core==0.12.40
-llama-index-readers-file==0.4.8
-llama-index-embeddings-huggingface==0.5.4
-llama-index-llms-huggingface==0.5.0
-python-dotenv==1.0.0
+fastapi>=0.110.0
+uvicorn>=0.29.0
+pydantic>=2.6.0
+python-multipart>=0.0.9
+llama-index-core>=0.10.20
+llama-index-llms-huggingface>=0.5.0
 sentence-transformers>=2.6.1
-transformers>=4.37.0,<5.0.0
-torch>=2.1.2
-pdfplumber==0.9.0
-PyMuPDF==1.23.0
-Pillow==10.0.0
+torch>=2.2.1
+PyMuPDF>=1.24.0
+pillow>=10.2.0
+python-dotenv>=1.0.0
+redis>=5.0.0
